#5 fix task 4 + task 5 DONE

--- a/notebooks/solution.ipynb
+++ b/notebooks/solution.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "5c156fcb",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "bc0436d2-6f8d-44ea-b49e-f128506168d1",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "4  Тереза Мэй рассчитывает усидеть в седле до зав...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "ce12abc9",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "b5eb1f87",
    "metadata": {},
    "outputs": [
@@ -467,12 +467,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "0288e091-f3cf-4ddc-b2ef-f9ebcbe7606c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>document_id</th>\n",
+       "      <th>entity</th>\n",
+       "      <th>gold_answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>EVT</td>\n",
+       "      <td>Brexit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>LOC</td>\n",
+       "      <td>Альбиона</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>LOC</td>\n",
+       "      <td>Альбионе</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>Борис Джонсон Борис</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>LOC</td>\n",
+       "      <td>Британии</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             document_id entity          gold_answer\n",
+       "0  brexit_ru.txt_file_10    EVT               Brexit\n",
+       "1  brexit_ru.txt_file_10    LOC             Альбиона\n",
+       "2  brexit_ru.txt_file_10    LOC             Альбионе\n",
+       "3  brexit_ru.txt_file_10    PER  Борис Джонсон Борис\n",
+       "4  brexit_ru.txt_file_10    LOC             Британии"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Parsing the raw GigaChat response blocks into a structured DataFrame and saving to CSV\n",
+    "\n",
     "\n",
     "raw = \"\"\"\n",
     "--- PROMPT for brexit_ru.txt_file_10 ---\n",
@@ -759,28 +834,28 @@
     "документ (текст)\n",
     "\"\"\"\n",
     "\n",
-    "# Parse the raw text into structured records\n",
+    "\n",
     "import pandas as pd\n",
     "import re\n",
     "\n",
     "records = []\n",
-    "# Split into blocks by the '--- PROMPT for <id> ---'\n",
-    "blocks = re.split(r\"--- PROMPT for ([\\w\\.]+) ---\", raw)[1:]  # first element before first split\n",
-    "# blocks structure: [doc_id1, block1, doc_id2, block2, ...]\n",
+    "\n",
+    "blocks = re.split(r\"--- PROMPT for ([\\w\\.]+) ---\", raw)[1:]  \n",
+    "\n",
     "for i in range(0, len(blocks), 2):\n",
     "    doc_id = blocks[i]\n",
     "    content = blocks[i+1]\n",
-    "    # Extract lines after 'Ответ'\n",
+    "    \n",
     "    parts = content.split(\"Ответ\",1)[-1]\n",
     "    lines = [line.strip() for line in parts.splitlines() if line.strip()]\n",
     "    current_type = None\n",
     "    for line in lines:\n",
-    "        # Detect entity type header\n",
+    "        \n",
     "        if re.match(r\"^(PER|LOC|ORG|EVT|PRO):$\", line):\n",
     "            current_type = line[:-1]\n",
-    "        # Detect entity entries (non-header, non bullet)\n",
+    "        \n",
     "        elif not re.match(r\"^(PER|LOC|ORG|EVT|PRO):$\", line):\n",
-    "            # Remove bullet markers if present\n",
+    "            \n",
     "            entity = line.lstrip(\"•\").strip()\n",
     "            if current_type:\n",
     "                records.append({\n",
@@ -789,17 +864,24 @@
     "                    \"predicted\": entity\n",
     "                })\n",
     "\n",
-    "# Build DataFrame\n",
+    "\n",
     "df_pred = pd.DataFrame(records)\n",
     "\n",
-    "# Save to CSV\n",
+    "\n",
     "output_path = '../data/predictions/predictions.csv'\n",
     "df_pred.to_csv(output_path, index=False, encoding='utf-8-sig')\n",
     "\n",
+    "df_pred.head()\n",
     "\n",
     "\n",
+    "from src.data_loader import load_annotations\n",
+    "import pandas as pd\n",
     "\n",
-    "\n"
+    "ANN_DIR = \"../data/annotations\"\n",
+    "\n",
+    "df_gold = load_annotations(ANN_DIR)\n",
+    "df_gold.to_csv(\"../data/annotations/gold.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "df_gold.head()\n"
    ]
   },
   {
@@ -812,7 +894,7 @@
     "##  Задание 5: Реализация метрики score_fn() и юнит-тесты\n",
     "\n",
     "**Формулировка:**  \n",
-    "<сюда можно вставить формулировку из ТЗ>\n",
+    "<Реализуйте самостоятельно алгоритм для подсчета метрик score_fn(gold: str, pred: str) → float.>\n",
     "\n",
     "\n"
    ]
@@ -822,9 +904,162 @@
    "execution_count": 6,
    "id": "14a404f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>document_id</th>\n",
+       "      <th>entity</th>\n",
+       "      <th>predicted</th>\n",
+       "      <th>gold_answer</th>\n",
+       "      <th>f1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>Тереза Мэй</td>\n",
+       "      <td>Борис Джонсон Борис</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>Тереза Мэй</td>\n",
+       "      <td>Джонсон</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>Тереза Мэй</td>\n",
+       "      <td>Джонсона</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>Тереза Мэй</td>\n",
+       "      <td>Мишелю Барнье Мишель</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>brexit_ru.txt_file_10</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>Тереза Мэй</td>\n",
+       "      <td>Мэй</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             document_id entity   predicted           gold_answer        f1\n",
+       "0  brexit_ru.txt_file_10    PER  Тереза Мэй   Борис Джонсон Борис  0.000000\n",
+       "1  brexit_ru.txt_file_10    PER  Тереза Мэй               Джонсон  0.000000\n",
+       "2  brexit_ru.txt_file_10    PER  Тереза Мэй              Джонсона  0.000000\n",
+       "3  brexit_ru.txt_file_10    PER  Тереза Мэй  Мишелю Барнье Мишель  0.000000\n",
+       "4  brexit_ru.txt_file_10    PER  Тереза Мэй                   Мэй  0.666667"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Код для задания 5"
+    "\n",
+    "import pandas as pd\n",
+    "from src.metrics import score_fn          \n",
+    "\n",
+    "df_gold = pd.read_csv(\"../data/annotations/gold.csv\", encoding=\"utf-8-sig\")\n",
+    "df_pred = pd.read_csv(\"../data/predictions/predictions.csv\", encoding=\"utf-8-sig\")\n",
+    "\n",
+    "\n",
+    "df = (\n",
+    "    df_pred\n",
+    "    .rename(columns={\"entity_type\": \"entity\"})\n",
+    "    .merge(df_gold, on=[\"document_id\",\"entity\"], how=\"left\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "df[\"gold_answer\"] = df[\"gold_answer\"].fillna(\"\")\n",
+    "df[\"predicted\"]   = df[\"predicted\"].fillna(\"\")\n",
+    "\n",
+    "# 3) считаем F1\n",
+    "df[\"f1\"] = df.apply(\n",
+    "    lambda row: score_fn(row[\"gold_answer\"], row[\"predicted\"]),\n",
+    "    axis=1,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "df.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea391ae-531d-41ad-805c-cb514f47303e",
+   "metadata": {},
+   "source": [
+    "## 1. **Векторная реализация**\n",
+    "\n",
+    "- В текущей реализации мы вызываем score_fn для каждой строки через DataFrame.apply, что на больших объёмах может быть медленно. Для ускорения можно:\n",
+    "\n",
+    "- Преобразовать все gold строки и все pred строки в списки токенов заранее (например, с помощью .str.split()) и сложить их в два массива списков.\n",
+    "\n",
+    "- Для каждого элемента массива вычислять пересечение множеств с помощью NumPy или SciPy векторных операций:\n",
+    "\n",
+    "- Можно представить каждое множество токенов как мешок слов  и получить из этого разреженные матрицы csr_matrix из scipy.sparse.\n",
+    "\n",
+    " Тогда попарную точность и полноту можно высчитать через матричное умножение этих разреженных матриц, а F1 — уже от полученных векторов precision/recall.\n",
+    "\n",
+    "Либо использовать sklearn.feature_extraction.text.CountVectorizer + sklearn.metrics.precision_recall_fscore_support, чтобы сразу получить векторные оценки по всем строкам.\n",
+    "\n",
+    "- Такой подход позволяет уйти от поэлементного Python‑цикла и задействовать оптимизации на C/C++ внутри NumPy/SciPy.\n",
+    "\n",
+    "## 2. **Почему F1‑метрика**\n",
+    "Мы выбрали именно F1‑меру (­гармоническое среднее precision и recall), потому что:\n",
+    "\n",
+    "- Precision показывает, какой процент предсказанных токенов действительно встречается в правильном ответе (он же «точность»).\n",
+    "\n",
+    "- Recall показывает, какой процент «золотых» токенов был найден (он же «полнота»).\n",
+    "\n",
+    "- F1 объединяет оба аспекта в одну скалярную метрику и не позволяет «завалить» качество одним из параметров:\n",
+    "\n",
+    "- Если модель просто выдаёт всё подряд, у неё будет высокий recall, но низкий precision → низкий F1.\n",
+    "\n",
+    "- Если модель слишком консервативна, precision будет высоким, но recall — низким → опять низкий F1.\n",
+    "\n",
+    "Таким образом F1 отражает баланс между переизбыточностью и неполнотой предсказаний, что критично для задачи извлечения сущностей (где важно и не пропустить ни одной нужной сущности, и не наплодить лишнего)."
    ]
   },
   {
